--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lab-landed",
-  "version": "0.0.4",
+  "version": "0.0.5",
   "description": "canner can",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,7 +11,8 @@
   },
   "keywords": [
     "canner-can",
-    "lab"
+    "lab",
+    "other"
   ],
   "author": "frankyang",
   "license": "MIT",
